<resources>
    <string name="app_name">vimems</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="label_password">密码</string>
    <string name="label_username">用户名</string>
    <string name="add_coach">添加教练</string>
    <string name="coach_username">姓名</string>
    <string name="coach_gender">性别</string>
    <string name="coach_birthday">出生日期</string>
    <string name="coach_ID">教练ID</string>
    <string name="save_pwd">保存密码</string>
    <string name="save_password">保存密码</string>
    <string name="coach_rank">评分</string>
    <string name="coach_rank_1">A</string>
    <string name="coach_rank_2">B</string>
    <string name="coach_rank_3">C</string>
    <string name="admin_add_member">增加会员</string>
    <string name="add_coach_submit">确认添加</string>
    <string name="admin_ID">管理员ID</string>
    <string name="image_ID">image_ID</string>
    <string name="coach_login_name">教练登录名</string>
    <string name="login_password">登录密码</string>
    <string name="admin_remove_member">删除会员</string>
    <string name="admin_check_ble_device">ScanAdv蓝牙</string>
    <string name="add_coach_ID">默认教练ID</string>
    <string name="add_admin_ID">默认管理员ID</string>
    <string name="add_image_ID">头像</string>
    <string name="add_coach_username">添加教练名</string>
    <string name="add_coach_login_name">添加教练登录名</string>
    <string name="add_coach_login_password">添加教练登录密码</string>
    <string name="add_coach_gender">添加教练性别</string>
    <string name="add_coach_birthday">添加教练出生日期</string>
    <string name="add_coach_rank">默认教练评分</string>
    <integer name="login_button_alpha">1</integer>

    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="no_name">(no name)</string>
    <string name="coach_name">教练姓名</string>
    <string name="add_coach_button">增加教练按钮</string>

    <string name="refresh">Refresh</string>
    <string name="empty_list">empty_list</string>
    <string name="scan_start_toast">scan_start_toast</string>
    <string name="seconds">seconds</string>
    <string name="already_scanning">already_scanning</string>
    <string name="activity_ble_scanner_advitiser_title">BleScanAdv</string>
    <string name="bt_ads_not_supported">bt_ads_not_supported</string>
    <string name="bt_not_supported">bt_not_supported</string>
    <string name="bt_not_enabled_leaving">bt_not_enabled_leaving</string>
    <string name="start_error_prefix">start_error_prefix</string>
    <string name="start_error_already_started">start_error_already_started</string>
    <string name="start_error_too_large">start_error_too_large</string>
    <string name="start_error_unsupported">start_error_unsupported</string>
    <string name="start_error_internal">start_error_internal</string>
    <string name="start_error_too_many">start_error_too_many</string>
    <string name="advertising_timedout">advertising_timedout</string>
    <string name="start_error_unknown">start_error_unknown</string>
    <string name="broadcast_device">Broadcast Device</string>
    <string name="bt_null">bt_null</string>
    <string name="refresh_scan_button">Scan BLE</string>
    <string name="set_gatt_server_periphery">BluetoothGattServer作为周边来提供数据(app)</string>
    <string name="as_gatt_central">BluetoothGatt作为中央来使用和处理数据(device)</string>


    <string name="ble_not_supported">BLE 不支持</string>
    <string name="label_data">数据：</string>
    <string name="label_device_address">设备MAC地址：</string>
    <string name="label_state">连接状态：</string>
    <string name="no_data">暂无数据</string>
    <string name="connected">已连接</string>
    <string name="disconnected">断开连接</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">不支持蓝牙</string>

    <string name="unknown_device">未知 device</string>
    <string name="unknown_characteristic">未知 characteristic</string>
    <string name="unknown_service">未知 service</string>

    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">开始扫描</string>
    <string name="menu_stop">停止扫描</string>
    <string name="coach_gender_male">男</string>
    <string name="coach_gender_female">女</string>
    <string name="total_coach_num">教练总人数:</string>
    <string name="show_bind_device">Binded Device</string>
    <string name="bind_device_detail_connect">重连</string>
    <string name="bind_device_detail_disconnect">断开</string>
    <string name="single_mode">单人模式</string>
    <string name="custom_training">自定义训练</string>
    <string name="video_training">课程训练</string>
    <string name="vip_training">VIP训练</string>
    <string name="training_mode">训练模式：</string>
    <string name="custom_training_options_gain_muscle">增肌</string>
    <string name="custom_training_options_recovery">康复</string>
    <string name="custom_training_options_shape">塑形</string>
    <string name="custom_training_options_lose_fat">减脂</string>
    <string name="custom_training_options">自定义训练项</string>
    <string name="custom_training_mode_item_level">等级</string>
    <string name="custom_training_mode_item_low_frequency">低频(HZ)</string>
    <string name="primary">初级</string>
    <string name="training_item_level_primary">初级</string>
    <string name="training_item_level_intermediate">中级</string>
    <string name="training_item_level_senior">高级</string>
    <string name="custom_training_mode_item_high_frequency">高频(HZ)</string>
    <string name="custom_training_mode_item_pulse_width">脉宽(%)</string>
    <string name="custom_training_mode_item_pulse_peroid">脉冲时间(秒)</string>
    <string name="custom_training_mode_item_intermittent_period">间歇时间(秒)</string>
    <string name="training_item_recovery_level_relax">放松</string>
    <string name="training_item_recovery_level_soothe">镇痛</string>
    <string name="training_item_recovery_level_damage">损伤</string>
    <string name="training_muscle_item">肌肉位置：</string>
    <string name="muscle_xiongdaji">胸大肌</string>
    <string name="muscle_fuji">腹肌</string>
    <string name="front_muscle">正面肌肉</string>
    <string name="back_muscle">背部肌肉</string>
    <string name="muscle_xiefangji">斜方肌</string>
    <string name="muscle_beikuoji">背阔肌</string>
    <string name="other_muscle">其它</string>
    <string name="muscle_a">肌肉1</string>
    <string name="muscle_b">肌肉2</string>
    <string name="muscle_c">肌肉3</string>
    <string name="muscle_d">肌肉4</string>
    <string name="muscle_e">肌肉5</string>
    <string name="muscle_f">肌肉6</string>
    <string name="muscle_item_unchecked_all">清空</string>
    <string name="muscle_item_checked_all">全选</string>
    <string name="save_muscle_para">保存</string>
    <string name="alter_muscle_para">修改</string>
    <string name="single_mode_training_startup">开始训练</string>
    <string name="training_muscle_intensity">强度(%)</string>
    <string name="alter_bind_member_custom_device_name">重命名</string>
    <string name="single_mode_training_pause">暂停</string>
    <string name="single_mode_training_resume">继续</string>
    <string name="single_mode_training_shutdown">结束</string>
    <string name="scan_bluetooth_trigger">扫描</string>
    <string name="connect_all_selected_device">一键连接</string>
    <string name="disconnect_all_selected_device">断开连接</string>
    <string name="display_device_recyclerview">查看可用设备列表</string>
    <string name="hide_device_recyclerview">隐藏设备列表</string>
    <string name="multiplayer_mode">多人模式</string>
    <string name="custom_training_module_item_gain_muscle">增肌</string>
    <string name="custom_training_module_item_lose_fat">减脂</string>
    <string name="custom_training_module_item_shape">塑形</string>
    <string name="custom_training_module_item_recovery">恢复</string>


</resources>
