<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_username"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/coach_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_gender"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/coach_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_birthday"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/coach_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>