<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">
    <android.support.v7.widget.AppCompatTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:textSize="38sp"
        android:text="@string/custom_training_options_lose_fat"/>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/custom_training_mode_item_level"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/training_item_level_primary"
                android:text="@string/training_item_level_primary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <RadioButton
                android:id="@+id/training_item_level_intermediate"
                android:text="@string/training_item_level_intermediate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <RadioButton
                android:id="@+id/training_item_level_senior"
                android:text="@string/training_item_level_senior"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RadioGroup>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/custom_training_mode_item_low_frequency"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="0-100"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"/>
        <android.support.v7.widget.AppCompatButton
            android:text="—"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.AppCompatButton
            android:text="+"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/custom_training_mode_item_high_frequency"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="2000-3800MHZ"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"/>
        <android.support.v7.widget.AppCompatButton
            android:text="—"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.AppCompatButton
            android:text="+"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/custom_training_mode_item_pulse_width"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="0-100%"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"/>
        <android.support.v7.widget.AppCompatButton
            android:text="—"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.AppCompatButton
            android:text="+"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/custom_training_mode_item_pulse_peroid"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="1-30秒"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"/>
        <android.support.v7.widget.AppCompatButton
            android:text="—"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.AppCompatButton
            android:text="+"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/custom_training_mode_item_intermittent_period"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="0-30秒"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"/>
        <android.support.v7.widget.AppCompatButton
            android:text="—"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.AppCompatButton
            android:text="+"
            android:layout_width="38dp"
            android:layout_height="wrap_content"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--分割线-->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>
    
</android.support.v7.widget.LinearLayoutCompat>